--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "First version of this project. Project with complete solutions for dev",
   "main": "./backend/server-app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -w",
+    "prodation": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -22,9 +23,23 @@
   "dependencies": {
     "cheerio": "1.0.0-rc.2",
     "express": "4.16.2",
-    "passport": "0.4.0"
+    "passport": "0.4.0",
+    "react": "16.2.0"
   },
   "devDependencies": {
-    "nodemon": "1.14.12"
+    "autoprefixer": "8.0.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.9",
+    "extract-text-webpack-plugin": "3.0.2",
+    "node-sass": "4.7.2",
+    "nodemon": "1.14.12",
+    "postcss-loader": "2.1.0",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.20.1",
+    "uglifyjs-webpack-plugin": "1.1.8",
+    "webpack": "3.11.0"
   }
 }
