--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
   },
   "homepage": "https://github.com/Tskon/Bredik#readme",
   "dependencies": {
-    "bootstrap": "4.0.0",
     "cheerio": "1.0.0-rc.2",
     "express": "4.16.2",
-    "jquery": "3.3.1",
     "passport": "0.4.0",
     "react": "16.2.0",
+    "react-bootstrap": "0.32.1",
     "react-dom": "16.2.0"
   },
   "devDependencies": {
@@ -40,6 +39,7 @@
     "node-sass": "4.7.2",
     "nodemon": "1.14.12",
     "postcss-loader": "2.1.0",
+    "precss": "3.1.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.20.1",
     "uglifyjs-webpack-plugin": "1.1.8",
