--- a/package.json
+++ b/package.json
@@ -34,20 +34,20 @@
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "copy-webpack-plugin": "^4.4.1",
+    "clean-webpack-plugin": "0.1.18",
+    "copy-webpack-plugin": "4.4.1",
     "css-loader": "0.28.9",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "^1.1.6",
-    "imagemin-webpack-plugin": "^2.0.0",
-    "img-loader": "^2.0.1",
+    "file-loader": "1.1.6",
+    "imagemin-webpack-plugin": "2.0.0",
+    "img-loader": "2.0.1",
     "node-sass": "4.7.2",
     "nodemon": "1.14.12",
     "postcss-loader": "2.1.0",
     "precss": "3.1.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.20.1",
-    "svg-url-loader": "^2.3.1",
+    "svg-url-loader": "2.3.1",
     "uglifyjs-webpack-plugin": "1.1.8",
     "webpack": "3.11.0"
   }
