--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
   "homepage": "https://github.com/Tskon/Bredik#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "cheerio": "1.0.0-rc.2",
     "cookie-parser": "^1.4.3",
     "express": "4.16.2",
     "express-session": "^1.15.6",
+    "jquery": "^3.3.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.12.9",
     "react": "16.2.0",
-    "react-bootstrap": "0.32.1",
     "react-dom": "16.2.0"
   },
   "devDependencies": {
