--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "cheerio": "1.0.0-rc.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "4.16.2",
     "express-session": "^1.15.6",
