--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express-session": "^1.15.6",
     "jquery": "^3.3.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport-google-oauth": "^1.0.0",
     "popper.js": "^1.12.9",
     "react": "16.2.0",
     "react-dom": "16.2.0"
