--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "passport-google-oauth": "^0.2.0",
     "popper.js": "^1.12.9",
     "react": "16.2.0",
-    "react-dom": "16.2.0"
+    "react-dom": "16.2.0",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2"
   },
   "devDependencies": {
     "autoprefixer": "8.0.0",
