--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Tskon/Bredik#readme",
   "dependencies": {
+    "axios": "0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "cheerio": "1.0.0-rc.2",
