--- a/package.json
+++ b/package.json
@@ -36,15 +36,19 @@
     "popper.js": "^1.12.9",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-redux": "5.0.7",
     "react-router": "4.2.0",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "redux": "3.7.2"
   },
   "devDependencies": {
     "autoprefixer": "8.0.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
     "clean-webpack-plugin": "0.1.18",
     "copy-webpack-plugin": "4.4.1",
     "css-loader": "0.28.9",
