--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/Tskon/Bredik#readme",
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "cheerio": "1.0.0-rc.2",
@@ -33,13 +33,14 @@
     "jquery": "^3.3.1",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.2.0",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.14.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-redux": "5.0.7",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
-    "redux": "3.7.2"
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-promise-middleware": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "8.0.0",
