--- a/package.json
+++ b/package.json
@@ -22,26 +22,26 @@
   },
   "homepage": "https://github.com/Tskon/Bredik#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0",
+    "axios": "0.18.0",
+    "body-parser": "1.18.2",
+    "bootstrap": "4.0.0",
     "cheerio": "1.0.0-rc.2",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.3",
+    "connect-flash": "0.1.1",
+    "cookie-parser": "1.4.3",
     "express": "4.16.2",
-    "express-session": "^1.15.6",
-    "jquery": "^3.3.1",
-    "passport": "^0.2.1",
-    "passport-google-oauth": "^0.2.0",
-    "popper.js": "^1.14.1",
+    "express-session": "1.15.6",
+    "jquery": "3.3.1",
+    "passport": "0.2.1",
+    "passport-google-oauth": "0.2.0",
+    "popper.js": "1.14.1",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "react-redux": "5.0.7",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "redux-logger": "3.0.6",
-    "redux-promise-middleware": "^5.0.0"
+    "redux-promise-middleware": "5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "8.0.0",
