--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "dependencies": {
     "axios": "0.18.0",
     "body-parser": "1.18.2",
-    "bootstrap": "4.0.0",
     "cheerio": "1.0.0-rc.2",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
@@ -32,6 +31,7 @@
     "express-session": "1.15.6",
     "jquery": "3.3.1",
     "mysql": "2.15.0",
+    "normalize": "0.3.1",
     "passport": "0.2.1",
     "passport-google-oauth": "0.2.0",
     "popper.js": "1.14.1",
