--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express-session": "1.15.6",
     "jquery": "3.3.1",
     "mysql": "2.15.0",
-    "normalize": "0.3.1",
+    "normalize.css": "^8.0.0",
     "passport": "0.2.1",
     "passport-google-oauth": "0.2.0",
     "popper.js": "1.14.1",
