--- a/package.json
+++ b/package.json
@@ -27,46 +27,46 @@
     "cheerio": "1.0.0-rc.2",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
-    "express": "4.16.2",
+    "express": "4.16.3",
     "express-session": "1.15.6",
     "jquery": "3.3.1",
     "mysql": "2.15.0",
-    "normalize.css": "^8.0.0",
-    "passport": "0.2.1",
-    "passport-google-oauth": "0.2.0",
-    "popper.js": "1.14.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "normalize.css": "8.0.0",
+    "passport": "0.4.0",
+    "passport-google-oauth": "1.0.0",
+    "popper.js": "1.14.3",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
-    "redux": "3.7.2",
+    "redux": "4.0.0",
     "redux-logger": "3.0.6",
-    "redux-promise-middleware": "5.0.0"
+    "redux-promise-middleware": "5.1.1"
   },
   "devDependencies": {
-    "autoprefixer": "8.0.0",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "autoprefixer": "8.4.1",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "6.24.1",
-    "clean-webpack-plugin": "0.1.18",
-    "copy-webpack-plugin": "4.4.1",
-    "css-loader": "0.28.9",
+    "clean-webpack-plugin": "0.1.19",
+    "copy-webpack-plugin": "4.5.1",
+    "css-loader": "0.28.11",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "imagemin-webpack-plugin": "2.0.0",
+    "file-loader": "1.1.11",
+    "imagemin-webpack-plugin": "2.1.1",
     "img-loader": "2.0.1",
-    "node-sass": "4.7.2",
-    "nodemon": "1.14.12",
-    "postcss-loader": "2.1.0",
-    "precss": "3.1.0",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.20.1",
-    "svg-url-loader": "2.3.1",
-    "uglifyjs-webpack-plugin": "1.1.8",
+    "node-sass": "4.9.0",
+    "nodemon": "1.17.3",
+    "postcss-loader": "2.1.4",
+    "precss": "3.1.2",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21.0",
+    "svg-url-loader": "2.3.2",
+    "uglifyjs-webpack-plugin": "1.2.5",
     "webpack": "3.11.0"
   },
   "engines": {
