--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.11",
-    "extract-text-webpack-plugin": "3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "1.1.11",
     "imagemin-webpack-plugin": "2.1.1",
     "img-loader": "2.0.1",
@@ -67,7 +67,8 @@
     "style-loader": "0.21.0",
     "svg-url-loader": "2.3.2",
     "uglifyjs-webpack-plugin": "1.2.5",
-    "webpack": "3.11.0"
+    "webpack": "4.6.0",
+    "webpack-cli": "2.1.2"
   },
   "engines": {
     "node": "8.9.1"
