--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "webpack -w",
-    "production": "webpack -p"
+    "build": "set NODE_ENV=development && webpack --mode=development",
+    "production": "set NODE_ENV=production && webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "express-session": "1.15.6",
     "jquery": "3.3.1",
     "mysql": "2.15.0",
-    "normalize.css": "8.0.0",
+    "normalize.scss": "0.1.0",
     "passport": "0.4.0",
     "passport-google-oauth": "1.0.0",
     "popper.js": "1.14.3",
