--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "react-dom": "^16.4.1",
     "webpack": "^4.15.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0"
+  },
   "scripts": {
     "dev": "webpack --mode --watch development",
     "prod": "webpack --mode production",
