--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
+  "plugins": ["transform-es2015-spread"],
   "presets": [
     "env",
     "react"
-  ],
-  "plugins": ["transform-es2015-spread"]
+  ]
 }
